# claude-orchestra

./: .gitignore  CHANGELOG.md  CLAUDE.md  GETTING_STARTED.md  README.md  pyproject.toml
docs/: hook-schemas.md
docs/superpowers/notes/: 2026-05-20-orchestra-patterns-after-real-world-use.md  2026-05-21-on-device-testing-postrun.md  2026-05-21-on-device-testing-predictions.md
docs/superpowers/plans/: 2026-05-16-claude-orchestra-v0.md  2026-05-16-claude-orchestra-v0.md.tasks.json  (+9 more)
examples/: urlshortener-mission.md  urlshortener-verifier.sh
examples/kanban/: mission.md
missions/kanban/: mission.md  verifier.sh
missions/urlshortener/: mission.md  verifier.sh
orchestra/: __init__.py  __main__.py  _frontmatter.py  _hook_client.py  cli.py  cost.py  hookd.py  hooks.py  mission_lint.py  missions.py  poll.py  prompts.py  role_prompts.py  role_scaffold.py  run.py  settings_merge.py  spawn.py  spawn_batch.py  state.py  tmux.py  web.py  worktree.py
orchestra/roles/: __init__.py  engineer.md  pm.md
orchestra/templates/: index.html
research/: synthesis.md
scripts/: e2e-build-kanban.sh  e2e-build-urlshortener.sh  e2e-spawn.sh
tests/: conftest.py  test_cli.py  test_cost.py  test_frontmatter.py  test_hookd.py  test_hooks.py  test_merge_batch.py  test_mission_lint.py  test_missions.py  test_multi_mission_e2e.py  test_poll.py  test_prompts.py  test_resource_locks.py  test_role_prompts.py  test_role_scaffold.py  test_roles.py  test_run.py  test_settings_merge.py  test_spawn.py  test_spawn_batch.py  test_state.py  test_tmux.py  test_web.py  test_worktree.py
(+12 files in other folders)
