[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-orchestra"
version = "0.1.0"
description = "Tmux-based orchestrator for parallel Claude Code workers"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-jinja2",
]

[project.scripts]
orchestra = "orchestra.__main__:main"

[tool.setuptools.packages.find]
include = ["orchestra*"]

[tool.setuptools.package-data]
orchestra = ["templates/*.html", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = false

[[tool.mypy.overrides]]
module = ["orchestra.state", "orchestra.tmux"]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
